--- a/config/config.yaml
+++ b/config/config.yaml
@@ -10,4 +10,10 @@ data_ingestion:
 data_transformation:
   root_dir: artifacts/data_ingestion
   data_path: E:\Food_Delivery\artifacts\data_ingestion\train.csv
+
+
+model_trainer:
+  root_dir: artifacts/data_ingestion
+  data_path: E:\Food_Delivery\artifacts\data_ingestion\Final_train.csv
+
   
