--- a/config/config.yaml
+++ b/config/config.yaml
@@ -13,7 +13,9 @@ data_transformation:
 
 
 model_trainer:
-  root_dir: artifacts/data_ingestion
+  root_dir: artifacts/models
   data_path: E:\Food_Delivery\artifacts\data_ingestion\Final_train.csv
+  model_path: artifacts\models\DeliveryModel.pkl
+
 
   
